--- a/docs/scss/Index.module.scss
+++ b/docs/scss/Index.module.scss
@@ -9,9 +9,20 @@
         color: white;
         font-size: 2.5rem;
     }
+
+    > div span{
+        font-size: 3rem;
+        background-color: red;
+        @include extra_bold_font;
+        background: -webkit-linear-gradient(45deg, #ED7BFF, #0085FF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
     > p {
         @include medium_font;
         color: $grey;
-        font-size: 1.3rem;
+        font-size: 1.5rem;
+        margin-top: 30px;
+        max-width: 700px;
     }
 }
